--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -304,6 +304,13 @@ header {
 .section-features .long-copy {
     margin-bottom: 30px;
 }
+.box p.smallfont {
+	font-size: 50%;
+}
+
+.smallfont {
+	font-size: 50%;
+}
 
 
 /*-------------------------------------------------------*/
